--- a/lab-two.html
+++ b/lab-two.html
@@ -50,10 +50,10 @@
     </section>
     <section>
       <h2 style="text-align: center">
-        Web Development
+        Graphic Design
       </h2>
       <p style="text-align: center">
-        We specialize in creating responsive and user-friendly websites.
+        Our talented designers can bring your ideas to life with stunning visuals.
       </p>
       <form class="center-image">
         <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/331466851/original/746ad053535e2664eb179d9379b634d72cd0eab8/do-any-graphic-design-work.jpg" width="600" height="400">
@@ -61,3 +61,4 @@
     </section>
 </body>
 </html>
+
